name:                dtlang
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:
license:             GPL-3
license-file:        LICENSE
--author:
--maintainer:
--copyright:
category:            Languages
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

--executable dtlang
  --hs-source-dirs:      src
  --main-is:             Main.hs
  --default-language:    Haskell2010
  --build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , LambdaCase
                     , ScopedTypeVariables
                     , GeneralizedNewtypeDeriving
                     , TypeApplications
                     , MultiParamTypeClasses
                     , FlexibleInstances
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , multistate
                     , QuickCheck
  exposed-modules:     Equality
                     , Examples
                     , TC
                     , Term
                     , TypeCheck
                     , Types
                     , Utils

test-suite Test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , ExplicitForAll
                     , ScopedTypeVariables
                     , TypeApplications
                     , TupleSections
                     , Rank2Types
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
  other-modules:       Test.DataTypes
                     , Test.Generators
                     , Test.Interpreter
                     , Test.TypeCheck
                     , Test.BackTrackGen
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , QuickCheck
                     , QuickCheck-GenT
                     , logict-state
                     , dtlang
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , transformers
                     , random
