name:                dtlang
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:
license:             GPL-3
license-file:        LICENSE
--author:
--maintainer:
--copyright:
category:            Languages
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dtlang-repl
  hs-source-dirs:      bin/repl
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  LambdaCase
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , dtlang
                     , mtl
                     , text

executable dtlang-compiler
  hs-source-dirs:      bin/compiler
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  LambdaCase
  build-depends:       base >= 4.7 && < 5
                     , dtlang
                     , temporary
                     , text
                     , process

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , PatternSynonyms
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , KindSignatures
                     , GADTs
                     , TypeFamilies
                     , PolyKinds
                     , ConstraintKinds
                     , TypeFamilyDependencies
                     , TypeOperators
                     , DeriveFoldable
                     , DeriveTraversable
                     , ViewPatterns
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , lens
                     , mtl
                     , multistate
                     , natural-numbers
                     , parsec
                     , recursion-schemes
                     , text
                     , transformers
                     , containers
  exposed-modules:     Equality
                     , Examples
                     , Interpret
                     , Lexer
                     , Parser
                     , Sexp
                     , TC
                     , Term
                     , TypeCheck
                     , Types
                     , Utils
                     , Compiler

test-suite Test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , FlexibleContexts
                     , FlexibleInstances
                     , ExplicitForAll
                     , ScopedTypeVariables
                     , TypeApplications
                     , TupleSections
                     , Rank2Types
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , OverloadedStrings
                     , TypeFamilies
                     , GADTs
  other-modules:       Test.DataTypes
                     , Test.Generators
                     , Test.Interpreter
                     , Test.TypeCheck
                     , Test.BackTrackGen
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , lens
                     , QuickCheck
                     , QuickCheck-GenT
                     , dtlang
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , transformers
                     , random
                     , multistate
                     , natural-numbers
